# neural-networks

./: .gitignore  README.md  tester.bat
.github/workflows/: builder.yml
nntask1/: Cargo.toml
nntask1/src/: main.rs
nntask2/: Cargo.toml  input_cycle1.xml
nntask2/src/: main.rs
nntask3/: Cargo.toml
nntask3/src/: main.rs
nntask4/: Cargo.toml
nntask4/src/: main.rs
report/: SCWorks.cls  preamble.sty  report.tex  titlepage.tex
tests/: t1_input.txt  t1_output.xml  t2_input.xml  t2_output.txt  t3_ops.json  t3_output.txt  t4_model.json  t4_output.txt  t4_w.json
