[package]
name = "nntask4"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = false
strip = "symbols"

[dependencies]
burn = { version = "0.11.1", features = ["wgpu"] }
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
